--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1067,6 +1067,11 @@ footer .footer-container h5 {
   margin-top: 0rem;
 }
 .main-company .article-p {
-  text-align: justify;
   font-size: 0.45em;
+}
+
+@media (min-width: 50em) {
+  .main-company .main-article {
+    text-align: justify;
+  }
 }
